--- a/resources/less/components/about.less
+++ b/resources/less/components/about.less
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: @light_neutral;
 
     .about-img-container{
 
