--- a/resources/less/components/breadcrumbs.less
+++ b/resources/less/components/breadcrumbs.less
@@ -8,26 +8,31 @@
     align-items: center;
     font-weight: bold;
 
-    div{
+    display: grid;
+    grid-template: 1fr / auto 1fr;
+    grid-auto-flow: column;
+    grid-column-gap: 20px;
+
+
+}
+.previous-button{
+    .flex-center-content;
+    height: 10px;
+    padding: 5px 10px;
+    margin: 0 10px;
+
+    &-arrow {
         .flex-center-content;
-        justify-content: initial;
+        margin: 0 5px 0 0 ;
+        font-size: 20px;
 
-        .breadcrumbs-arrow {
-            .fixed-widh-height(25px,25px);
-            .flex-center-content;
-            .round-border(2px, solid, 10px);
-            .box-container-mixin(10%, 0px, @complementary_two);
-            padding: 0 5px;
-            font-size: 20px;
-            margin: 10px;
-
-            &:hover{
-                background-color: fade(@fourth, 20%);
-            }
-            &:active{
-                background-color: fade(@fourth, 40%);
-            }
-        }
+    }
+    &:hover{
+        background-color: fade(@fourth, 20%);
+        cursor: pointer;
+    }
+    &:active{
+        background-color: fade(@fourth, 40%);
     }
 }
 @media screen and (min-width: 860px){
