--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -4,7 +4,6 @@
 @import './utilities/variables.less';
 @import './utilities/mixins.less';
 @import './utilities/animations.less';
-// @import './utilities/media-queries.less';
 
 @import './components/logotype.less';
 @import './components/navigation.less';
@@ -19,8 +18,10 @@
 @import './components/copyright.less';
 @import './components/rating.less';
 @import './components/contact.less';
-@import './components/modal.less';
-@import './common/class-components.less';
 // @import './components/notification.less';
 // @import './components/admin.less';
 
+@import './partials/partials.less';
+@import './partials/archive.less';
+
+@import './controls/controls.less';
