--- a/resources/less/layouts/user.less
+++ b/resources/less/layouts/user.less
@@ -20,9 +20,9 @@
     overflow: hidden;
 }
 /* ===== C O N T E N T ===== */
-// .content-container{
-//  /* Wraps the section between the header & aside */
-// }
+.content-container{
+ /* Wraps the section between the header & aside */
+}
 /* ===== A S I D E ===== */
 .aside-container{
     text-align: center;
@@ -32,14 +32,14 @@
 .footer-container {
     .panel-tertiary;
 }
-@media screen and (min-width: 860px){
+@media @desktop{
     .user-layout {
         overflow: hidden;
         display:grid;
-        grid-template: repeat(5, 1fr) auto / auto repeat(5, 1fr)
+        grid-template: repeat(5, 1fr) auto / auto repeat(5, 1fr);
     }
     .header-container{
-        grid-row: 1/ 5;
+        grid-row: 1/ 4;
         grid-column: 1/ 2;
         max-height: initial;
         max-width: 250px;
@@ -50,53 +50,13 @@
     .content-container{
         grid-row: 1 / 6;
         grid-column: 2 / 7;
-
         display: grid;
         grid-auto-flow: column;
-
         grid-template: auto repeat(5, 1fr) / 1fr;
         overflow: hidden;
     }
     .aside-container{
-        grid-row: 5 / 7;
-        grid-column: 1 / 2;
-        max-width: 250px;
-    }
-    .footer-container{
-        grid-row: 6 / 7;
-        grid-column: 2 / 7;
-        min-height: initial;
-        justify-content: space-between;
-        background-color: @complementary_four;
-    }
-}
-@media screen and (min-width: 1024px){
-    .user-layout {
-        overflow: hidden;
-        display:grid;
-        grid-template: repeat(5, 1fr) auto / auto repeat(5, 1fr)
-    }
-    .header-container{
-        grid-row: 1/ 5;
-        grid-column: 1/ 2;
-        max-height: initial;
-        max-width: 250px;
-    }
-    .transparent-header-container{
-        display: block;
-    }
-    .content-container{
-        grid-row: 1 / 6;
-        grid-column: 2 / 7;
-
-        display: grid;
-        grid-auto-flow: column;
-
-        grid-template: auto repeat(5, 1fr) / 1fr;
-        overflow: hidden;
-    }
-    .aside-container{
-        grid-row: 5 / 7;
+        grid-row: 4 / 7;
         grid-column: 1 / 2;
         max-width: 250px;
     }
