--- a/resources/less/utilities/mixins.less
+++ b/resources/less/utilities/mixins.less
@@ -18,14 +18,13 @@
 .panel-tertiary{
     .base-panel(@complementary_three);
 }
-.box-container-mixin(@transparency: 100%, @padding: 10%,  @color: @complementary_one,
+.box-container-mixin(@transparency: 100%, @padding: 5px,  @color: @complementary_one,
 @border_width: 1px, @border_color: #ffffff40, @border_style: solid){
 
-    min-height: 20px;
     padding: @padding;
     background: fade(@color, @transparency);
     border: @border_width @border_style @border_color;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0px 3px 2px 0px #0000004d;
 }
 .proportional-size(@size) {
@@ -78,4 +77,8 @@
     border: 0;
     padding: 0;
     margin: 0;
+}
+.size(@width, @height){
+    width: @width;
+    height: @height;
 }
