[IMP] Project description & [RFTOR] Views structure (Dynamic)

--- a/resources/less/components/ads.less
+++ b/resources/less/components/ads.less
@@ -1,10 +1,13 @@
 .ads{
+    &-section-title{
+        padding-top: 10px;
+    }
     &-img-container{
         display: flex;
-        margin: 20px 0;
+        padding: 10px 0;
         justify-content: center;
         div{
-            margin: 10px;
+            margin: 0 10px;
         }
     }
 }
