--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -11,6 +11,7 @@
 .index-container {
     /* Wraps each sub-content section in the left side of the main content */
     overflow: inherit;
+    width: 100%;
     max-width: 600px;
     justify-self: center;
 }
@@ -19,6 +20,7 @@
     justify-self: center;
     display: none;
     height: 500px;
+    width: 100%;
     max-width: 600px;
 
 }
