--- a/resources/less/layouts/body.less
+++ b/resources/less/layouts/body.less
@@ -8,6 +8,7 @@ body {
     color: @base_font_color;
     font-size: @base_font_size;
     font-family: @base_font_family;
+    font-weight: 500;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ul, li{
