--- a/resources/less/utilities/variables.less
+++ b/resources/less/utilities/variables.less
@@ -1,5 +1,8 @@
-// Font Size Variables
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&family=Quicksand:wght@400;600;700&display=swap');
+// Quicksand
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');
+
+// Promp
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap');
 
 //Barrio Font - Like Scratches
 @import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
