--- a/resources/less/components/contact.less
+++ b/resources/less/components/contact.less
@@ -1,6 +1,6 @@
 /* ===== F O R M ===== */
 .form-container {
-    background: fade(@fifth, 50%);
+    // background: fade(@fifth, 50%);
    form{
         padding: 5px;
         border-radius: 5px;
