--- a/resources/less/components/copyright.less
+++ b/resources/less/components/copyright.less
@@ -1,7 +1,6 @@
 .copyrights {
     display: flex;
     font-size: @child_annotation_size;
-    color: @mid_neutral;
-    background-color: @complementary_four;
     padding: 10px;
+    color: @shade_one;
 }
