--- a/resources/less/components/navigation.less
+++ b/resources/less/components/navigation.less
@@ -10,16 +10,18 @@
     position: sticky;
     .transition(all, .5s, ease-out);
 
+
     &:hover{
-        background-color: fade(@fourth, 20%);
+        background-color: fade(@shade_two, 1%);
     }
     &:active{
         .fixed-widh-height(45px,45px);
-        background-color: fade(@fourth, 40%);
+        background-color: fade(@shade_two, 2%);
     }
 }
 .header-navigation-container{
-    padding: 20px;
+    // padding: 20px;
+
 
     & > ul{
         list-style: none;
@@ -30,13 +32,14 @@
 
         > a {
             padding:10px;
+            color: @shade_two;
 
             &:hover{
-                background-color: fade(@fourth, 20%);
+                background-color: fade(@shade_three, 20%);
                 border-radius: 2px;
             }
             &:active{
-                background-color: fade(@fourth, 40%);
+                background-color: fade(@shade_three, 40%);
             }
         }
     }
