--- a/resources/less/controls/filter.less
+++ b/resources/less/controls/filter.less
@@ -1,6 +1,5 @@
 .filter-container{
-    // margin: 10px 0;
     padding: 15px;
     color: @fourth;
-    background: @complementary_two;
+    background-color:fade(@secondary, 50%);
 }
