--- a/resources/less/controls/preview-item.less
+++ b/resources/less/controls/preview-item.less
@@ -5,18 +5,16 @@
     width: 200px;
     padding: 0 !important;
     background: @light_neutral !important;
+    border: none !important;
 
     &-title{
-        text-align: center;
-        padding: 5px;
-        background-color: fade(@dark_neutral, 10%);
+        padding: 10px 20px;
     }
 
     &-desc {
         text-align: justify;
         overflow: hidden;
-        padding: 0 5px;
-        margin: 5px 0;
+        padding: 10px 20px;
     }
 
     &-img-container{
@@ -37,7 +35,6 @@
     .preview-item{
         display:grid;
         grid-template: auto 1fr auto /auto 1fr;
-        align-items: center;
         height: 150px;
         width: 100%;
 
