--- a/resources/less/controls/window.less
+++ b/resources/less/controls/window.less
@@ -11,17 +11,17 @@
     .box-button{
         display: block;
         color: @fourth !important;
-        background: @dark_box_button_color;
+        // background: @dark_box_button_color;
         // .box-container-mixin(100%, 10px, @fifth, none, none, none);
         .remove-decoration;
         .button-setup;
 
         &:hover{
-            background: @dark_box_button_color_hover;
+            // background: @dark_box_button_color_hover;
         }
 
         &:active{
-            background:  @dark_box_button_color_active;
+            // background:  @dark_box_button_color_active;
             transform: scaleY(.95);
         }
         &:visited{
