--- a/resources/less/layouts/admin.less
+++ b/resources/less/layouts/admin.less
@@ -19,8 +19,8 @@
     padding: 10px;
     overflow: hidden;
 }
-/* ===== C O N T E N T ===== */
-.content-container{
+/* ===== D E S K T O P ===== */
+.desktop-container{
  /* Wraps the section between the header & aside */
 }
 /* ===== A S I D E ===== */
@@ -47,7 +47,7 @@
     .transparent-header-container{
         display: block;
     }
-    .content-container{
+    .desktop-container{
         grid-row: 1 / 6;
         grid-column: 2 / 7;
         display: grid;
