--- a/resources/less/partials/archive.less
+++ b/resources/less/partials/archive.less
@@ -4,6 +4,10 @@
 .archive-list{
     display: flex;
     height: 350px;
+    padding-right: 17px;
+    margin-left: 15px;
+    width: 100%;
+    box-sizing: content-box;
     overflow-y: hidden;
     overflow-x: scroll;
 
@@ -21,6 +25,6 @@
 }
 @media @desktop {
     .archive-list{
-        height: 73vh;
+        height: 100%;
     }
 }
