--- a/resources/less/utilities/animations.less
+++ b/resources/less/utilities/animations.less
@@ -25,3 +25,17 @@
         top: -100%
     }
 }
+@keyframes bgColor {
+    0%{
+        background-color: @primary;
+    }
+    25%{
+        background-color: @secondary;
+    }
+    75%{
+        background-color: @fourth;
+    }
+    100%{
+        background-color: @primary;
+    }
+}
