--- a/resources/less/components/breadcrumbs.less
+++ b/resources/less/components/breadcrumbs.less
@@ -1,19 +1,21 @@
 /* ===== B R E A D C R U M B S ===== */
 .breadcrumbs-container{
-    .panel-secondary;
-    width: 100%;
-    position: sticky;
-    z-index: 1;
-    top: 75px;
-    align-items: center;
-    font-weight: bold;
-
+    // .panel-secondary;
     display: grid;
-    grid-template: 1fr / auto 1fr;
+    grid-template: 1fr / auto 1fr auto;
     grid-auto-flow: column;
-    grid-column-gap: 20px;
+    grid-column-gap: 10px;
+    align-items: center;
+    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.7);
 
+    position: sticky;
+    top: 75px;
+    z-index: 1;
 
+    width: 100%;
+    padding: 10px;
+    font-weight: bold;
+    background-color: @shade_five;
 }
 .previous-button{
     .flex-center-content;
