--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -3,17 +3,22 @@
     /* Wraps everything in the content section */
     display:grid;
     grid-template : auto auto / 1fr;
-    background: linear-gradient(@fourth 20%, @secondary);
-    min-height: 50vh ;
     padding:20px;
+    min-height: 50vh ;
     overflow: scroll;
+
+    // background-color: fade(@shade_one, 60%);
+    background-color:#e9f5ff;
+
 }
 .index-container {
     /* Wraps each sub-content section in the left side of the main content */
     overflow: inherit;
     width: 100%;
-    max-width: 600px;
+    // max-width: 600px;
     justify-self: center;
+    background-color: @shade_one;
+
 }
 .sub-index-container{
     /* Wraps each sub-content section in the right side of the main content */
@@ -21,8 +26,14 @@
     display: none;
     height: 500px;
     width: 100%;
-    max-width: 600px;
 
+}
+.content-container {
+    /* Wraps each sub-content section in the right side of the main content */
+    // width: 65%;
+    // margin: 20px;
+    // background-color: @shade_one;
+    // box-shadow: 0px 0px 7px 1px #00000091;
 }
 .sub-content-container{
     /* Wraps the articles, posts, lists, projects, etc.*/
@@ -30,11 +41,12 @@
     margin: 10px;
 }
 .section-title {
-    padding: 10px 0;
+    // padding: 10px 0;
+    color: @shade_two;
 }
 @media @tablet{
-    .sub-index-container{
-        height: 700px;
+    .index-container{
+        background-color:#d6edff8f;
     }
 }
 @media @desktop{
@@ -42,23 +54,27 @@
         grid-row: 2 / 7;
         overflow: hidden;
         display: grid;
-        grid-template: 1fr / minmax(auto, 600px) auto;
+        grid-template: 1fr / 1fr 2fr;
         grid-column-gap: 20px;
         padding: 0px;
     }
     .index-container {
-       height: 100%;
-       grid-column: 1 /2;
-       max-width: initial;
-       justify-self: initial;
+        display: grid;
+        grid-template-rows: auto 1fr;
+        box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.5);
     }
     .sub-index-container{
         grid-column: 2 /3;
         position:relative;
-        overflow: hidden;
-        height: 95%;
+        overflow-x: hidden;
+        height: 100%;
         justify-self: initial;
-        max-width: 800px;
-
+    }
+    .subindex-content-container {
+        /* Wraps each sub-content section in the right side of the main content */
+        width: 65%;
+        margin: 0 20px;
+        background-color: @shade_one;
+        box-shadow: 0px 0px 7px 1px #00000056;
     }
 }
