--- a/resources/less/components/socialmedia.less
+++ b/resources/less/components/socialmedia.less
@@ -1,4 +1,5 @@
 .socialmedia-container{
+    color: @shade_one;
     padding: 20px;
     text-align: center;
     & > div{
@@ -11,8 +12,8 @@
         grid-template: repeat(2, 1fr) / repeat(4, 1fr);
 
         & > a{
-            color:@tertiary;
-            padding: 10px;
+            color: @shade_one;
+            margin: 0 10px;
 
             &:hover {
                 background-color: fade(@fourth, 20%);
