--- a/resources/less/controls/modal.less
+++ b/resources/less/controls/modal.less
@@ -1,3 +1,12 @@
+.overlay-container{
+    position:absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 8;
+    background-color: rgba(0, 0, 0, 0.8);
+}
 .modal-container {
     display: grid;
     grid-template: auto /1fr;
