--- a/resources/less/layouts/body.less
+++ b/resources/less/layouts/body.less
@@ -9,12 +9,20 @@ body {
     font-size: @base_font_size;
     font-family: @base_font_family;
     font-weight: 500;
+    // background: @body_bg_img;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ul, li{
     margin: 0;
     padding: 0;
     list-style: none;
+}
+a{
+    text-decoration: none;
+    color: initial;
+    &:visited{
+        color: initial;
+    }
 }
 
 h1{
