--- a/resources/less/partials/entry.less
+++ b/resources/less/partials/entry.less
@@ -8,21 +8,19 @@
 .entry{
     display: none;
     background: @light_neutral;
-    padding: 10px;
+    padding: 20px;
     max-width: 750px;
 
     &-header{
         h2{
-            padding: 5px;
-            margin-bottom: 10px;
-            background: fade(@mid_neutral, 50%);
+            padding: 10px;
+            // border-bottom: 1px solid;
         }
 
         .entry-meta-container{
-            max-width: 600px;
             margin: auto;
-            padding: 5px;
-            margin-bottom: 10px;
+            padding: 10px;
+            margin: 10px 0;
             background: fade(@mid_neutral, 30%);
             em{
                 font-style: initial;
@@ -32,19 +30,19 @@
     }
 
     .entry-img-container{
-        width: 100%;
-        margin-bottom: 10px;
+        margin: 10px 0;
 
         img{
             width: 100%;
-            max-height:400px ;
+            aspect-ratio: 16 / 9;
+            object-fit: cover;
         }
     }
 
     &-content{
-        max-width: 600px;
+        // max-width: 600px;
+        margin: 10px 0;
         text-align: justify;
-        margin: auto;
     }
     &-footer{}
 }
