--- a/resources/less/layouts/user.less
+++ b/resources/less/layouts/user.less
@@ -1,7 +1,8 @@
 .user-layout {
     height: inherit;
     overflow: scroll;
-    background-color: @tertiary;
+    // background-color: @tertiary;
+    background: linear-gradient(@secondary, @tertiary);
 }
 /* ===== H E A D E R ===== */
 .header-container{
