--- a/resources/less/partials/entry.less
+++ b/resources/less/partials/entry.less
@@ -21,7 +21,7 @@
             margin: auto;
             padding: 10px;
             margin: 10px 0;
-            background: fade(@mid_neutral, 30%);
+            // background: fade(@mid_neutral, 30%);
             em{
                 font-style: initial;
                 font-weight: bold;
