--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -6,34 +6,31 @@
     padding:20px;
     min-height: 50vh ;
     overflow: scroll;
+    // background: linear-gradient(fade(@primary, 50%), @fourth);
 
-    // background-color: fade(@shade_one, 60%);
-    background-color:#e9f5ff;
-
+    background-color:fade(#fdfdfd, 60%);
+}
+.main-center{
+    /* Wraps everything in the content section IS A SECOND LAYOUT FOR MAIN */
+    grid-row: 2 / 7;
+    display: grid;
+    place-items: center;
+    height: 100%;
+    background-color:fade(#fdfdfd, 60%);
+    // background-color:#fdfdfd
 }
 .index-container {
     /* Wraps each sub-content section in the left side of the main content */
     overflow: inherit;
     width: 100%;
-    // max-width: 600px;
     justify-self: center;
-    background-color: @shade_one;
-
 }
 .sub-index-container{
     /* Wraps each sub-content section in the right side of the main content */
     justify-self: center;
     display: none;
-    height: 500px;
+    // height: 500px;
     width: 100%;
-
-}
-.content-container {
-    /* Wraps each sub-content section in the right side of the main content */
-    // width: 65%;
-    // margin: 20px;
-    // background-color: @shade_one;
-    // box-shadow: 0px 0px 7px 1px #00000091;
 }
 .sub-content-container{
     /* Wraps the articles, posts, lists, projects, etc.*/
@@ -46,7 +43,7 @@
 }
 @media @tablet{
     .index-container{
-        background-color:#d6edff8f;
+        // background-color:#d6edff8f;
     }
 }
 @media @desktop{
@@ -54,14 +51,13 @@
         grid-row: 2 / 7;
         overflow: hidden;
         display: grid;
-        grid-template: 1fr / 1fr 2fr;
-        grid-column-gap: 20px;
+        grid-template: 1fr / repeat(2, 1fr);
+        // grid-column-gap: 20px;
         padding: 0px;
     }
     .index-container {
         display: grid;
-        grid-template-rows: auto 1fr;
-        box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.5);
+        place-items: center;
     }
     .sub-index-container{
         grid-column: 2 /3;
@@ -70,9 +66,21 @@
         height: 100%;
         justify-self: initial;
     }
+    .index-content-container {
+        /* Wraps each sub-content section in the right side of the main content */
+        width: 80%;
+        height: 100%;
+        display: grid;
+        overflow-x: hidden;
+        grid-template-rows: auto 1fr;
+        // background: linear-gradient(fade(@primary, 50%), @fourth);
+        background-color: fade(@shade_two, 10%);
+
+        box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.3);
+    }
     .subindex-content-container {
         /* Wraps each sub-content section in the right side of the main content */
-        width: 65%;
+        width: 90%;
         margin: 0 20px;
         background-color: @shade_one;
         box-shadow: 0px 0px 7px 1px #00000056;
