--- a/resources/less/components/blog.less
+++ b/resources/less/components/blog.less
@@ -29,7 +29,7 @@
         grid-template: auto / 1fr;
         grid-row-gap: 5px;
         border-radius: 5px;
-        .box-container-mixin(20%, 10px, @mid_neutral, none, none, none);
+        // .box-container-mixin(20%, 10px, @mid_neutral, none, none, none);
         box-shadow: none;
     }
 
