--- a/resources/less/components/copyright.less
+++ b/resources/less/components/copyright.less
@@ -2,5 +2,5 @@
     display: flex;
     font-size: @child_annotation_size;
     padding: 10px;
-    color: @shade_one;
+    color: @footer_text_color;
 }
