--- a/resources/less/components/portfolio.less
+++ b/resources/less/components/portfolio.less
@@ -17,7 +17,7 @@
                 left: 0;
                 bottom: 0;
                 right:0;
-                background: linear-gradient(fade(@complementary_two ,80%), fade(@complementary_three, 80%));
+                // background: linear-gradient(fade(@complementary_two ,80%), fade(@complementary_three, 80%));
                 min-height: inherit;
                 display: flex;
                 justify-content: center;
@@ -25,7 +25,7 @@
                 text-decoration: none;
                 text-align: center;
                 font-family: 'Zilla Slab Highlight', sans-serif;
-                color: @light_neutral;
+                // color: @light_neutral;
             }
         }
     }
