--- a/resources/less/components/rating.less
+++ b/resources/less/components/rating.less
@@ -4,7 +4,7 @@
 }
 
 .rate {
-    color: @fourth;
+    // color: @fourth;
     // color: #fd4;
 }
 .rating-container {
@@ -29,18 +29,18 @@
 
 .star-widget>label {
     font-size: 20px;
-    color: @complementary_two;
-    -webkit-text-stroke: 1px @complementary_one;
+    // color: @complementary_two;
+    // -webkit-text-stroke: 1px @complementary_one;
     transition: all 0.2s ease;
 }
 
 .star-widget>input:not(:checked)~label:hover,
 .star-widget>input:not(:checked)~label:hover~label {
-    color:@fourth;
+    // color:@fourth;
     // color: #fd4;
 }
 
 .star-widget>input:checked~label {
-    color: @fourth;
+    // color: @fourth;
     // color: #fd4;
 }
