--- a/resources/less/layouts/admin.less
+++ b/resources/less/layouts/admin.less
@@ -4,7 +4,7 @@
 }
 /* ===== H E A D E R ===== */
 .header-container{
-    .panel-primary;
+    // .panel-primary;
     position: sticky;
     top: 0;
     z-index: 2;
@@ -26,11 +26,11 @@
 /* ===== A S I D E ===== */
 .aside-container{
     text-align: center;
-    .panel-primary;
+    // .panel-primary;
 }
 /* ===== F O O T E R ===== */
 .footer-container {
-    .panel-tertiary;
+    // .panel-tertiary;
 }
 @media @desktop{
     .admin-layout {
@@ -66,6 +66,6 @@
         min-height: initial;
         display: flex;
         justify-content: space-between;
-        background-color: @complementary_four;
+        // background-color: @complementary_four;
     }
 }
