--- a/resources/less/components/breadcrumbs.less
+++ b/resources/less/components/breadcrumbs.less
@@ -10,12 +10,13 @@
 
     position: sticky;
     top: 75px;
-    z-index: 1;
+    z-index: @breadcrumbs_index;
 
     width: 100%;
-    padding: 10px;
+    padding: 10px 0;
     font-weight: bold;
-    background-color: @shade_five;
+    color: @breadcrumbs_text_color;
+    background-color: @breadcrumbs_bg_color;
 }
 .previous-button{
     .flex-center-content;
