--- a/resources/less/components/navigation.less
+++ b/resources/less/components/navigation.less
@@ -8,6 +8,8 @@
     transform: rotateZ(90deg);
     font-weight: bold;
     position: sticky;
+    z-index: @header_nav_index;
+
     .transition(all, .5s, ease-out);
 
 
@@ -32,14 +34,14 @@
 
         > a {
             padding:10px;
-            color: @shade_two;
+            color: @header_text_color;
 
             &:hover{
-                background-color: fade(@shade_three, 20%);
+                background-color: @link_bg_color_hover;
                 border-radius: 2px;
             }
             &:active{
-                background-color: fade(@shade_three, 40%);
+                background-color: @link_bg_color_active;
             }
         }
     }
