--- a/resources/less/controls/paging.less
+++ b/resources/less/controls/paging.less
@@ -4,5 +4,5 @@
     justify-content: space-between;
     padding: 15px;
     color: @fourth;
-    background: @complementary_two;
+    // background: @complementary_two;
 }
