--- a/resources/less/controls/preview-item.less
+++ b/resources/less/controls/preview-item.less
@@ -4,7 +4,9 @@
     height:100%;
     width: 200px;
     padding: 0 !important;
-    background: @light_neutral !important;
+    color: @preview_item_text_color;
+    background: @preview_item_bg;
+    // background-color: @preview_item_bg_color !important;
     border: none !important;
 
     &-title{
