--- a/resources/less/partials/entry.less
+++ b/resources/less/partials/entry.less
@@ -1,15 +1,15 @@
-.entry-container{
-    overflow-y: scroll !important;
-    overflow-x: hidden !important;
-    padding: 0 !important;
-    height: 100%;
-}
+// .entry-container{
+//     overflow-y: scroll !important;
+//     overflow-x: hidden !important;
+//     padding: 0 !important;
+//     height: 100%;
+// }
 
 .entry{
     display: none;
-    background: @light_neutral;
     padding: 20px;
     max-width: 750px;
+    background-color: @entry_bg_color;
 
     &-header{
         h2{
@@ -45,4 +45,9 @@
         text-align: justify;
     }
     &-footer{}
+}
+@media @desktop {
+    .entry{
+        padding: 50px;
+    }
 }
