[RFTOR] Login form

--- a/resources/less/layouts/user.less
+++ b/resources/less/layouts/user.less
@@ -2,6 +2,9 @@
     height: inherit;
     overflow: scroll;
 }
+.website-title{
+    color: @website_title_color;
+}
 /* ===== H E A D E R ===== */
 .header-container{
     position: sticky;
