--- a/resources/less/utilities/variables.less
+++ b/resources/less/utilities/variables.less
@@ -21,6 +21,7 @@
 @note_font_family: 'Indie Flower';
 
 @base_font_color: rgb(9, 9, 9);
+@website_title_color: @tint_two;
 @base_font_size: 15px;
 @parent_heading_size : 25px;
 @heading_size : 20px;
