[RFTOR] Model - Controller - Cookies - Design - Files Structure

--- a/resources/less/components/home.less
+++ b/resources/less/components/home.less
@@ -1,8 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 /* ===== H O M E ===== */
-.home-container{
-    height: 70vh;
-    display: flex;
-    align-items: center;
-    background: @home_bg_img no-repeat center 50%;
-    padding:10%;
+// .home-container{
+//     grid-row: 1/ 7;
+//     display: grid;
+//     place-items: center;
+// }
+.salute{
+    text-align: center;
+    width: 60%;
+    font-size: 3em;
+    font-family: 'Press Start 2P', cursive;
+    font-style: normal;
+    color: #fffefe;
+    text-shadow: 0px 0px 15px @primary;
+    padding: 10% 0;
+    box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.481);
+    border: solid 2px @primary;
+    border-radius: 5px;
+
+    em{
+        font-style: normal;
+    }
+}
+
+.not{
+    animation: intermittentLightGoOff 10s linear infinite;
+}
+.just-another-blog{
+    animation: intermittentLight 8s linear infinite;
 }
