--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -8,8 +8,6 @@
     overflow: scroll;
     background-color: @main_bg_color;
     z-index: @main_index;
-
-
 }
 .main-center{
     /* Wraps everything in the content section IS A SECOND LAYOUT FOR MAIN */
@@ -76,5 +74,9 @@
         width: 90%;
         margin: 0 20px;
         box-shadow: 0px 0px 7px 1px #00000056;
+        background-color: @index_bg_color;
+        padding: 0px 20px;
+        height: 100%;
+        overflow-y: scroll;
     }
 }
