--- a/resources/less/components/navigation.less
+++ b/resources/less/components/navigation.less
@@ -30,9 +30,12 @@
         text-align: center;
         display: grid;
         grid-template: auto / 1fr;
-        grid-row-gap: 5px;
+        // grid-row-gap: 5px;
 
         > a {
+            box-shadow: 0px 0px 1px 1px #00000021;
+            background: linear-gradient(transparent, #00000030);
+
             padding:10px;
             color: @header_text_color;
 
