--- a/resources/less/controls/modal.less
+++ b/resources/less/controls/modal.less
@@ -53,6 +53,7 @@
             border: 1px solid @input_border_color;
 
             &:hover{
+                cursor: pointer;
                 background: @button_bg_color_hover;
             }
             &:active{
