--- a/resources/less/user.less
+++ b/resources/less/user.less
@@ -18,6 +18,7 @@
 @import './components/copyright.less';
 @import './components/rating.less';
 @import './components/contact.less';
+@import './components/errors.less';
 // @import './components/notification.less';
 // @import './components/admin.less';
 
