--- a/resources/less/utilities/variables.less
+++ b/resources/less/utilities/variables.less
@@ -48,6 +48,7 @@
 /* Module Bg Colors */
 @header_bg: linear-gradient(#23578f, #0f2146,#0f2146);
 @header_bg_color:      #0f2146;
+@desktop_bg_color:     #081829;
 @main_bg_color:        #081829 ;
 @breadcrumbs_bg_color: #083769;
 @footer_bg_color:      #182d71 ;
