--- a/resources/less/components/ads.less
+++ b/resources/less/components/ads.less
@@ -1,19 +1,13 @@
 .ads{
-    &-section-title{
-        padding-top: 10px;
-    }
+    overflow: hidden;
+
     &-img-container{
-        display: flex;
-        padding: 10px 0;
-        justify-content: center;
-        div{
-            margin: 0 10px;
+       padding:10px;
+
+        img{
+            width: 100%;
+            aspect-ratio: 1 /1;
         }
-    }
-}
-@media @desktop{
-    .ads-img-container{
-        flex-direction: column !important;
-        margin: 0;
+
     }
 }
