--- a/resources/less/components/logotype.less
+++ b/resources/less/components/logotype.less
@@ -4,6 +4,10 @@
     grid-template: auto / auto 1fr;
     grid-column-gap: 10px;
     align-items: center;
+
+    &:hover{
+        cursor: pointer;
+    }
 }
 @media screen and (min-width: 860px){
     .logotype-container{
