--- a/resources/less/layouts/user.less
+++ b/resources/less/layouts/user.less
@@ -27,8 +27,7 @@
 .desktop-container{
  /* Wraps the section between the header & aside */
     z-index: @desktop_index;
-
-
+    background-color: @desktop_bg_color;
 }
 /* ===== A S I D E ===== */
 .aside-container{
@@ -47,13 +46,16 @@
     .user-layout {
         overflow: hidden;
         display:grid;
-        grid-template: repeat(5, 1fr) auto / auto repeat(5, 1fr);
+        grid-template: repeat(5, 1fr) auto / minmax(auto, 240px) repeat(5, 1fr);
     }
     .header-container{
         grid-row: 1/ 4;
         grid-column: 1/ 2;
         max-height: initial;
         max-width: 250px;
+        display: grid;
+        grid-template: auto 1fr / 1fr;
+        grid-row-gap: 20px;
     }
     .transparent-header-container{
         display: block;
