[RFCTOR] Admin Routing

--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -1,4 +1,16 @@
 /* ===== M A I N ===== */
+.admin-main-container{
+    grid-row: 2 / 13;
+    grid-column: 1 / 13;
+
+    display: grid;
+    grid-template: repeat(12, 1fr) / repeat(12, 1fr);
+}
+.user-fields{
+    grid-row: 1 / 13;
+    grid-column: 1 / 4;
+}
+
 .main-container {
     /* Wraps everything in the content section */
     display:grid;
