--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -1,15 +1,15 @@
-@import './layouts/body.less';
-@import './layouts/admin.less';
-
 @import './utilities/variables.less';
 @import './utilities/mixins.less';
 @import './utilities/animations.less';
 
+@import './layouts/body.less';
+@import './layouts/admin.less';
+
 // @import './components/logotype.less';
-// @import './components/navigation.less';
+@import './components/navigation.less';
 // @import './components/home.less';
-// @import './components/main.less';
-// @import './components/breadcrumbs.less';
+@import './components/main.less';
+@import './components/desktop-navigation.less';
 // @import './components/blog.less';
 // @import './components/portfolio.less';
 // @import './components/about.less';
@@ -23,4 +23,4 @@
 
 @import './partials/partials.less';
 
-// @import './controls/controls.less';
+@import './controls/controls.less';
