--- a/resources/less/layouts/admin.less
+++ b/resources/less/layouts/admin.less
@@ -1,16 +1,20 @@
-.admin-layout {
+.user-layout {
     height: inherit;
     overflow: scroll;
 }
+.website-title{
+    color: @website_title_color;
+}
 /* ===== H E A D E R ===== */
 .header-container{
-    // .panel-primary;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: @header_index;
     width: 100%;
     max-height: 75px;
     overflow: hidden;
+    background: @header_bg;
+    // background-color: @header_bg;
     .transition(max-height, 1s, ease-in-out);
 }
 .transparent-header-container{
@@ -20,42 +24,52 @@
     overflow: hidden;
 }
 /* ===== D E S K T O P ===== */
-.desktop-container{
+.admin-desktop-container{
  /* Wraps the section between the header & aside */
+    z-index: @desktop_index;
+    background-color: @desktop_bg_color;
 }
 /* ===== A S I D E ===== */
 .aside-container{
+    z-index: @aside_index;
     text-align: center;
-    // .panel-primary;
+    background-color: @aside_bg_color;
+
 }
 /* ===== F O O T E R ===== */
 .footer-container {
-    // .panel-tertiary;
+    z-index: @footer_index;
+    box-shadow: 0px 0px 10px 1px #0000004a;
+    background-color: @footer_bg_color;
 }
 @media @desktop{
     .admin-layout {
-        overflow: hidden;
-        display:grid;
-        grid-template: repeat(5, 1fr) auto / auto repeat(5, 1fr);
+        display: grid;
+        grid-template: repeat(12, 1fr) / repeat(12, 1fr);
+        height: 100%;
+        width: 100%;
     }
     .header-container{
-        grid-row: 1/ 4;
+        grid-row: 1/ 13;
         grid-column: 1/ 2;
         max-height: initial;
         max-width: 250px;
+        display: grid;
+        grid-template: auto 1fr / 1fr;
+        grid-row-gap: 20px;
     }
     .transparent-header-container{
         display: block;
     }
-    .desktop-container{
-        grid-row: 1 / 6;
-        grid-column: 2 / 7;
+    .admin-desktop-container{
+        grid-row: 1 / 13;
+        grid-column: 2 / 13;
         display: grid;
-        grid-auto-flow: column;
-        grid-template: auto repeat(5, 1fr) / 1fr;
-        overflow: hidden;
+        grid-template: repeat(12, 1fr) / repeat(12, 1fr);
     }
     .aside-container{
+        display: grid;
+        place-items: end;
         grid-row: 4 / 7;
         grid-column: 1 / 2;
         max-width: 250px;
@@ -66,6 +80,6 @@
         min-height: initial;
         display: flex;
         justify-content: space-between;
-        // background-color: @complementary_four;
+        box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
     }
 }
