[RFT] Admin user fields

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -17,10 +17,12 @@
 // @import './components/socialmedia.less';
 // @import './components/copyright.less';
 // @import './components/rating.less';
-// @import './components/contact.less';
+@import './components/contact.less';
 // @import './components/notification.less';
 // @import './components/admin.less';
 
 @import './partials/partials.less';
 
 @import './controls/controls.less';
+
+
