--- a/resources/less/layouts/admin.less
+++ b/resources/less/layouts/admin.less
@@ -2,6 +2,13 @@
     height: inherit;
     overflow: scroll;
 }
+.module{
+    grid-row: 2 / 13;
+    grid-column: 1 / 4;
+
+    overflow-y: scroll;
+}
+
 .website-title{
     color: @website_title_color;
 }
